added material stuff and better templates _base.html

--- a/apps/users/templates/users/index.html
+++ b/apps/users/templates/users/index.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title></title>
-  <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}bower_components/angular-material/angular-material.min.css">
-</head>
-<body>
+{% extends 'saucesmere/_base.html' %}
 
-{% block javascript %}
-  <!-- Angular Material Dependencies -->
-  <script src="{{ STATIC_URL }}bower_components/angular/angular.min.js"></script>
-  <script src="{{ STATIC_URL }}bower_components/angular-animate/angular-animate.min.js"></script>
-  <script src="{{ STATIC_URL }}bower_components/angular-aria/angular-aria.min.js"></script>
-  <script src="{{ STATIC_URL }}bower_components/angular-material/angular-material.min.js"></script>
-
-  <!-- app-specific controller -->
-  <script src="{{ STATIC_URL }}users/js/app.js"></script>
+{% block title %}
+Blog
 {% endblock %}
-</body>
-</html>
+
+{% block content %}
+
+{% endblock %}
