--- a/apps/users/templates/users/index.html
+++ b/apps/users/templates/users/index.html
@@ -4,6 +4,35 @@
 Blog
 {% endblock %}
 
-{% block content %}
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}users/css/main.css">
+{% endblock %}
 
+{% block html_attrs %}
+ng-app="StarterApp"
+{% endblock %}
+
+{% block body_attrs %}
+layout="column" ng-controller="AppCtrl"
+{% endblock %}
+
+{% block content %}
+{% verbatim %}
+  <md-toolbar layout="row">
+    <button ng-click="toggleSidenav('left')" hide-gt-sm class="menuBtn">
+      <span class="visually-hidden">Menu</span>
+    </button>
+    <h1>Hello World</h1>
+  </md-toolbar>
+  <div layout="row" flex>
+      <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('gt-sm')">
+        
+      </md-sidenav>
+      <div layout="column" flex id="content">
+          <md-content layout="column" flex class="md-padding">
+            
+          </md-content>
+      </div>
+  </div>
+{% endverbatim %}
 {% endblock %}
